bf21 work: progress command